# recipeval

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/run-model/: SKILL.md
.github/workflows/: ci.yml  pages.yml
scripts/: analysis.py
src/recipeval/data/: dishes.json  ingredients.json  products.json  species.json
src/recipeval/models/: welfare.py
src/recipeval/prompts/: extractor.py
src/recipeval/scorers/: extractor.py
src/recipeval/tasks/: __init__.py  welfare.py
tests/recipeval/: test_extractor.py  test_models.py
